--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-Hi everyone
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="robots" content="noindex">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Denisa Ganocziova | Dublin based Digital Designer</title>
+    <meta name="description" content="Welcome to my website that showcases my original and inventive web designs.">
+    <link rel="stylesheet" href="assets/css/global.css"> 
+
+</head>
+
+<body>
+
+<h1>Welcome to my website</h1>
+
+<h2>Denisa Ganocziova</h2>
+
+<p>I created this site to showcase my most recent digital creations</p>
+
+<h3>Sample Web Pages</h3>
+
+<p><a href="exercises/page-1.html">A Tale of Two Cities</a></p>
+<p><a href="exercises/page-2.html">IBAT Chocolates</a></p>
+<p><a href="exercises/page-3.html">Prince & Purple Rain</a></p>
+<p><a href="exercises/page-4.html">Lorem Ipsum Text</a></p>
+
+
+</body>
+</html>
