--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
 </head>
 
+<img src="assets/img/pexels-tranmautritam-285814.jpg" alt="web design">
+
 <body>
 
 <h1>Welcome to my website</h1>
@@ -25,6 +27,11 @@
 <p><a href="exercises/page-2.html">IBAT Chocolates</a></p>
 <p><a href="exercises/page-3.html">Prince & Purple Rain</a></p>
 <p><a href="exercises/page-4.html">Lorem Ipsum Text</a></p>
+<p><a href="exercises/page-5.html">Vincent van Gogh</a></p> 
+<p><a href="exercises/page-6.html">Irish Tourism</a></p> 
+<p><a href="exercises/page-7.html">Smoothies</a></p> 
+<p><a href="exercises/page-8.html">Software Analytics</a></p> 
+
 
 
 </body>
