--- a/exercises/page-5.html
+++ b/exercises/page-5.html
@@ -9,6 +9,11 @@
 
     <link rel="stylesheet" href="assets/css/style-5.css">
 
+    <!--Google Fonts Stylesheet -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,300;1,400;1,700&display=swap" rel="stylesheet"> 
+
 </head>
 
 
@@ -47,3 +52,5 @@
 
 </body>
 </html>
+
+
