--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 <p><a href="exercises/page-6.html">Irish Tourism</a></p> 
 <p><a href="exercises/page-7.html">Smoothies</a></p> 
 <p><a href="exercises/page-8.html">Software Analytics</a></p> 
+<p><a href="exercises/hero-image.html">Hero block with background image</a></p> 
 
 
 
