--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 <p><a href="exercises/page-7.html">Smoothies</a></p> 
 <p><a href="exercises/page-8.html">Software Analytics</a></p> 
 <p><a href="exercises/hero-image.html">Hero block with background image</a></p> 
-
+<p><a href="exercises/hero-video.html">Hero block with background video</a></p> 
+<p><a href="exercises/page-9.html">The Box Model</a></p> 
+<p><a href="exercises/page-10.html">Web Page With Panels</a></p>
 
 
 </body>
