--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <meta name="description" content="Welcome to my website that showcases my original and inventive web designs.">
     <link rel="stylesheet" href="assets/css/global.css"> 
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Q76TKNXP6Y"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Q76TKNXP6Y');
+</script>
+
 </head>
 
 <img src="assets/img/pexels-tranmautritam-285814.jpg" alt="web design">
