--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   gtag('config', 'G-Q76TKNXP6Y');
 </script>
-
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" />
 </head>
 
 <img src="assets/img/pexels-tranmautritam-285814.jpg" alt="web design">
@@ -46,6 +46,21 @@
 <p><a href="exercises/page-9.html">The Box Model</a></p> 
 <p><a href="exercises/page-10.html">Web Page With Panels</a></p>
 
-
+<script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js" data-cfasync="false"></script>
+<script>
+window.cookieconsent.initialise({
+  "palette": {
+    "popup": {
+      "background": "#000"
+    },
+    "button": {
+      "background": "#f1d600"
+    }
+  },
+  "content": {
+    "href": "https://denisamate.github.io/privacy.html"
+  }
+});
+</script>
 </body>
 </html>
