--- a/index.html
+++ b/index.html
@@ -35,23 +35,22 @@
     <nav></nav>
 
     <!-- header -->
-    <header></header>
+    <header class="hero-block hero-half half-img-right">
+        <div class="col-2">
+            <div class="hero-text-container text-center-mobile">
+            <h1 class="slide-in-left">Hi, my name is Denisa</h1>
+            <h2 class="slide-in-left">I create eye-catching and easy to navigate web designs</h2>
+            <div class="container-btn"><a href="#" class="btn btn-primary btn-soft"><i class="far fa-folder-open"></i><span>See my work</span></a><a href="#" class="btn btn-secondary btn-soft"><i class="fas fa-at"></i><span>Contact me</span></a></div>
+        </div>
+    </div><div class="col-2">
+            <div class="hero-bg-media">
+            <img src="assets/img/web-design.jpg" alt="web design">
+            </div>
+        </div>
+    </header>
 
     <!-- main content with sections -->
     <main>
-        <header class="hero-block hero-half half-img-right">
-            <div class="col-2">
-                <div class="hero-text-container text-center-mobile">
-                <h1 class="slide-in-left">Hi, my name is Denisa</h1>
-                <h2 class="slide-in-left">I create eye-catching and easy to navigate web designs</h2>
-                <div class="container-btn"><a href="#" class="btn btn-primary btn-soft"><i class="far fa-folder-open"></i><span>See my work</span></a><a href="#" class="btn btn-secondary btn-soft"><i class="fas fa-at"></i><span>Contact me</span></a></div>
-            </div>
-        </div><div class="col-2">
-                <div class="hero-bg-media">
-                <img src="assets/img/web-design.jpg" alt="web design">
-                </div>
-            </div>
-        </header>
 
         <section class="container-flex theme-two img-shadow img-border">
             <div class="col-1 text-center">
@@ -84,6 +83,30 @@
     <!-- footer -->
     
 	
+	
+	<footer>
+
+		<h2>Consectetur Aipisicing</h2>
+
+		<h3>Nulla Repellat Nesciunt</h3>
+
+		<ul class="footer-links">
+			<li><a href="#">Link</a></li>
+			<li><a href="#">Link</a></li>
+			<li><a href="#">Link</a></li>
+		</ul>
+
+		<ul class="footer-icons">
+			<li><a href="#" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+			<li><a href="#" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
+			<li><a href="#" target="_blank"><i class="fab fa-github-square"></i></a></li>
+			<li><a href="#" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
+			<li><a href="#" target="_blank"><i class="fab fa-instagram-square"></i></a></li>
+		</ul>
+
+		<p class="privacy"><a href="#">Privacy &amp; Legal</a></p>
+
+	</footer>
    
 </body>
 </html>
