--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
     <nav></nav>
 
     <!-- header -->
-    <header class="hero-block hero-half half-img-right">
+    <header class="hero-block hero-half half-img-right text-center-mobile">
         <div class="col-2">
-            <div class="hero-text-container text-center-mobile">
+            <div class="hero-text-container ">
             <h1 class="slide-in-left">Hi, my name is Denisa</h1>
             <h2 class="slide-in-left">I create eye-catching and easy to navigate web designs</h2>
-            <div class="container-btn"><a href="#" class="btn btn-primary btn-soft"><i class="far fa-folder-open"></i><span>See my work</span></a><a href="#" class="btn btn-secondary btn-soft"><i class="fas fa-at"></i><span>Contact me</span></a></div>
+            <div class="container-btn"><a href="portfolio/" class="btn btn-primary btn-soft"><i class="far fa-folder-open"></i><span>See my work</span></a><a href="contact/" class="btn btn-secondary btn-soft"><i class="fas fa-at"></i><span>Contact me</span></a></div>
         </div>
     </div><div class="col-2">
             <div class="hero-bg-media">
@@ -62,7 +62,7 @@
                 <figure><img src="assets/img/project-van-gogh.png" alt="Placeholder image"></figure>
                 <h3>Vincent Van Gogh</h3>
                 <p>A summary of the life and work of Dutch artist Vincent van Gogh with an embeded video from YouTube.</p>
-            <a href="exercises/page-5.html" class="btn btn-primary btn-soft">
+            <a href="portfolio/van-gogh/" class="btn btn-primary btn-soft">
             <i class="fas fa-angle-right"></i><span>View Project</span></a></div>
     
             <div class="col-3">
@@ -91,9 +91,9 @@
 		<h3>Nulla Repellat Nesciunt</h3>
 
 		<ul class="footer-links">
-			<li><a href="#">Link</a></li>
-			<li><a href="#">Link</a></li>
-			<li><a href="#">Link</a></li>
+			<li><a href="#">Home</a></li>
+			<li><a href="portfolio/">Portfolio</a></li>
+			<li><a href="contact/">Contact</a></li>
 		</ul>
 
 		<ul class="footer-icons">
