--- a/exercises/menus/index.html
+++ b/exercises/menus/index.html
@@ -23,13 +23,13 @@
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" rel="stylesheet" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous">
 </head>
 
-<nav class="container-menu menu-desktop">
+<nav class="container-menu menu-desktop menu-sticky">
 	<a href="#"><img src="assets/img/website-logo.png" alt="website logo"></a>
 	<ul>
-		<li><a href="features">Link</a></li>
-		<li><a href="benefits">Link</a></li>
-		<li><a href="customers">Link</a></li>            
-		<li><a href="#" id="btn-cta" class="btn-soft"><span>CTA Link</span><i class="fas fa-arrow-right"></i></a></li>
+		<li><a href="features">Features</a></li>
+		<li><a href="benefits">Benefits</a></li>
+		<li><a href="customers">Customers</a></li>            
+		<li><a href="#" id="btn-cta" class="btn-soft"><span>Sign up</span><i class="fas fa-arrow-right"></i></a></li>
 	</ul>
 	<div class="item-icon">
 		<div class="bar1"></div>
