--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
     <nav class="container-menu menu-desktop menu-sticky">
         <a href="#"><img src="assets/img/website-logo.png" alt="website logo"></a>
         <ul>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>            
-            <li><a href="#" id="btn-cta" class="btn-soft"><span>CTA Link</span><i class="fas fa-arrow-right"></i></a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="portfolio/index.html">Portfolio</a></li>
+            <li><a href="#"></a></li>            
+            <li><a href="#" id="btn-cta" class="btn-soft"><span>Sign up</span><i class="fas fa-arrow-right"></i></a></li>
         </ul>
         <div class="item-icon">
             <div class="bar1"></div>
@@ -65,7 +65,7 @@
             <div class="hero-text-container ">
             <h1 class="slide-in-left">Hi, my name is Denisa</h1>
             <h2 class="slide-in-left">I create eye-catching and easy to navigate web designs</h2>
-            <div class="container-btn"><a href="portfolio/" class="btn btn-primary btn-soft"><i class="far fa-folder-open"></i><span>See my work</span></a><a href="contact/" class="btn btn-secondary btn-soft"><i class="fas fa-at"></i><span>Contact me</span></a></div>
+            <div class="container-btn"><a href="portfolio/index.html" class="btn btn-primary btn-soft"><i class="far fa-folder-open"></i><span>See my work</span></a><a href="contact/index.html" class="btn btn-secondary btn-soft"><i class="fas fa-at"></i><span>Contact me</span></a></div>
         </div>
     </div><div class="col-2">
             <div class="hero-bg-media">
