--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -26,6 +26,16 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
     rel="stylesheet">
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Q76TKNXP6Y"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Q76TKNXP6Y');
+</script>
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" />
 </head>
 
 
@@ -69,22 +79,23 @@
 
 		<div class="col-3">
 			<figure><img src="../assets/img/project-van-gogh.png" alt="project-van-gogh"></figure>
-			<h3>Lorem ipsum dolo</h3>
-			<p>Lorem ipsum dolor sit amet voluptas. Consectetur adipisicing. Possimus dolores accusamus facilis fugiat. Velsit perferendis officia.</p>
+			<h3>Vincent Van Gogh</h3>
+			<p>A summary of the life and work of Dutch artist Vincent van Gogh with an embeded video from YouTube.</p>
             <a href="../portfolio/van-gogh/" class="btn btn-primary btn-soft">
                 <i class="fas fa-angle-right"></i><span>View Project</span></a>
 		</div>
 
 		<div class="col-3">
 			<figure><img src="../assets/img/project-smoothie.jpg" alt="project-smoothie"></figure>
-			<h3>Lorem ipsum dolo</h3>
-			<p>Lorem ipsum dolor sit amet voluptas. Consectetur adipisicing. Possimus dolores accusamus facilis fugiat. Velsit perferendis officia.</p>
+			<h3>Smooth Smoothies</h3>
+			<p>A multi-column, flexbox-based page layout and hero image with a tinted overlay.</p>
             <a href="../portfolio/smoothies/index.html" class="btn btn-primary btn-soft">
                 <i class="fas fa-angle-right"></i><span>View Project</span></a>
 		</div>
 
 		<div class="col-3">
-			<figure><img src="../assets/img/project-fashion.jpg" alt="project-fashion"></figure><h3>Lorem ipsum dolo</h3><p>Lorem ipsum dolor sit amet voluptas. Consectetur adipisicing. Possimus dolores accusamus facilis fugiat. Velsit perferendis officia.</p>
+			<figure><img src="../assets/img/project-fashion.jpg" alt="project-fashion"></figure><h3>Snazzy Fashion</h3>
+            <p>A web page for a fashion retailer with a background video that plays in a continuous loop.</p>
             <a href="../portfolio/fashion/index.html" class="btn btn-primary btn-soft">
                 <i class="fas fa-angle-right"></i><span>View Project</span></a>
 		</div>
@@ -94,9 +105,9 @@
 
     <!-- footer -->
     <footer>
-        <h2>Consectetur Aipisicing</h2>
+        <h2>Denisa Ganocziova</h2>
 
-		<h3>Nulla Repellat Nesciunt</h3>
+		<h3>Web-design</h3>
 
 		<ul class="footer-links">
 			<li><a href="../">Home</a></li>
@@ -116,6 +127,21 @@
 
 
     </footer>
-   
+    <script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js" data-cfasync="false"></script>
+    <script>
+    window.cookieconsent.initialise({
+      "palette": {
+        "popup": {
+          "background": "#000"
+        },
+        "button": {
+          "background": "#f1d600"
+        }
+      },
+      "content": {
+        "href": "https://denisamate.github.io/privacy.html"
+      }
+    });
+    </script>
 </body>
 </html>
